--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Delivery App</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     
+
+
+
+<script type="module" src="app.js"></script>
 </body>
 </html>
